# cofinance_CI

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_online_last_seen.py
assurances/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
assurances/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  views.py
core/: views.py
credits/: admin.py  models.py  serializers.py  urls.py  views.py
credits/migrations/: 0001_initial.py  0002_alter_credit_status.py
dashboard/: serializers.py  urls.py  views.py
notifications/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
remboursements/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
remboursements/migrations/: 0001_initial.py  0002_remove_remboursement_interest_repaymentschedule_and_more.py
static/css/: style.css
static/js/: app.js  calculator.js  chat.js  nps.js
support_chat/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
support_chat/migrations/: 0001_initial.py
surveys/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
surveys/migrations/: 0001_initial.py
templates/: base.html
templates/admin_panel/: credits.html  users.html
templates/assurances/: list.html  subscribe.html
templates/auth/: login.html  profile.html  register.html
(+17 files in other folders)
